# "test/benchmarks/Makefile.am"
#	$Id: Makefile.am,v 1.2 2011/06/22 19:38:31 fang Exp $

include $(top_srcdir)/test/Make.test-head

# this directory first, to clean the test-report
SUBDIRS =

EXTRA_DIST += README

srcdir_EXTRA_DIST += \
	event-queue-a.hac
	event-queue-a-01.prsimrc

include $(top_srcdir)/test/Make.test-tail

